--- a/templates/mascota/index.html
+++ b/templates/mascota/index.html
@@ -1,9 +1,13 @@
 {% extends 'base/base.html' %}
 
-
-
+{% block title %}
+Mascota
+{% endblock %}
 
 {% block content %}
-    <h6>Contenido mascota</h6>
+<h1> Contenido aplicacion mascota</h1>
 {% endblock %}
+
+
+
 
